<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TicTacToe</string>

    <string name="game_tie">Tie!</string>
    <string name="game_rematch">Rematch</string>
    <string name="game_player1">Player 1</string>
    <string name="game_vstxt">vs.</string>
    <string name="game_player2">Player 2</string>

    <string name="btnback">Back</string>
    <string name="difficulty">difficulty</string>
    <string name="wonAppend">won!</string>
    <string name="player1name">player1name</string>
    <string name="player2name">player2name</string>
    <string name="sharedPrefs">TicTacToe_Preferences</string>
    <string name="vsCPU">CPU</string>
    <string name="aiDifficulty1">1</string>
    <string name="aiDifficulty2">2</string>

    <string name="start_twoplayer_game">Start Two-player Game</string>
    <string name="start_oneplayer_game">Start One-player Game (vs. AI)</string>
    <string name="mainmenu">Main Menu</string>
    <string name="mainmenu_gametitle">TicTacToe</string>
    <string name="mainmenu_abouthelp">About/Help</string>
    <string name="mainmenu_highscores">Game Log</string>

    <string name="selectaidifficulty_easy">Easy</string>
    <string name="selectaidifficulty_medium">Medium</string>
    <string name="selectaidifficulty_hard">Hard</string>
    <string name="selectaidifficulty_selectdifficutly">Select Difficutly</string>
    <string name="selectaidifficulty_difficulty">difficulty</string>

    <string name="getplayernames_playernametxt">Enter player names</string>
    <string name="getplayernames_player1name">Player 1</string>
    <string name="getplayernames_player2name">Player 2</string>
    <string name="getplayernames_isVsCPU">isVsCPU</string>
    <string name="getplayernames_start">Start</string>

    <string name="about_wikiquotesourcetxt">- Wikipedia, Tic-tac-toe</string>
    <string name="about_authortxt">by Jonas Jensen\njenjon13@student.westerdals.no</string>
    <string name="about_wikiquotetxt">\"Tic-tac-toe (or Noughts and crosses, Xs and Os) is a […] game for
        two players, X and O, who take turns marking the spaces in a 3×3 grid. The player who succeeds in placing three
        respective marks in a horizontal, vertical, or diagonal row wins the game.\"
    </string>
    <string name="boardfragment_gamelog">Highscores</string>
    <string name="highscores">highscores</string>
</resources>
