<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layoutSelectDifficulty"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/selectaidifficulty_selectdifficutly"
            android:id="@+id/txtSelectDifficulty" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectaidifficulty_easy"
            android:id="@+id/btnDifficultyEasy" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectaidifficulty_medium"
            android:id="@+id/btnDifficultyMedium" android:layout_gravity="center_horizontal"/>
</LinearLayout>