<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/about_txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backbtnFragment"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:linksClickable="false"
        android:text="@string/about_authortxt"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/about_txtWikiquote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/about_txtTitle"
        android:layout_marginTop="37dp"
        android:padding="10dp"
        android:text="@string/about_wikiquotetxt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/about_txtWikiquoteSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/about_txtWikiquote"
        android:layout_below="@+id/about_txtWikiquote"
        android:padding="10dp"
        android:text="@string/about_wikiquotesourcetxt"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <fragment
        android:id="@+id/backbtnFragment"
        android:name="no.wact.jenjon13.TicTacToe.fragments.BackBtnFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/backbtnfragment"/>
</RelativeLayout>
