<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layoutSelectDifficulty"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

    <TextView
        android:id="@+id/txtSelectDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/selectaidifficulty_selectdifficutly"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btnDifficultyEasy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDifficultyMedium"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectaidifficulty_easy"/>

    <Button
        android:id="@+id/btnDifficultyMedium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectaidifficulty_medium"/>

    <fragment
        android:id="@+id/backbtnFragment"
        android:name="no.wact.jenjon13.TicTacToe.fragments.BackBtnFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/backbtnfragment"/>
</RelativeLayout>
