<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutGameScreen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gamePlayer1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/game_player1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/gamePlayerVsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:text="@string/game_vstxt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/gamePlayer2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:singleLine="true"
            android:text="@string/game_player2"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:columnCount="3"
        android:rowCount="3">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:maxHeight="200px"
            android:maxWidth="200px"
            android:minHeight="200px"
            android:minWidth="200px" />
    </GridLayout>

    <TextView
        android:id="@+id/txtDeclareWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnRematch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_rematch"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnGamelog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boardfragment_gamelog"
        android:visibility="invisible"/>

    <fragment
        android:id="@+id/backbtnFragment"
        android:name="no.wact.jenjon13.TicTacToe.fragments.BackBtnFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/backbtnfragment" />
</LinearLayout>

